Usando repository, acesso ao banco via Hibernate/JPA e exibindo listagem em uma nova rota.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,20 @@
             <version>1.4.7.RELEASE</version>
         </dependency>
 
+        <!--Hibernate e JPA -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>1.5.8.RELEASE</version>
+        </dependency>
+
+        <!-- Conector MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
+        </dependency>
+
     </dependencies>
 
 </project>
